# deep-research-gemini

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
instructions/: 01.md
src/agents/: agent_base.py  learning_generation.py  question_generation.py  report_generation.py  search_query_generation.py  send_message_llm_genai.py  title_generation.py
src/tools/: apify_tools.py
src/ui/: app.py
tests/: draft.md  test_agents.py
